レスポンシブ追加

--- a/introduce.html
+++ b/introduce.html
@@ -6,12 +6,85 @@
    <title>Bootstrapの練習</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">  
    <link rel="stylesheet" href="css/bootstrap.css">
+   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
    <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
    <script type="text/javascript" src="js/bootstrap.js"></script>
   </head>
+
 <body>
-<h1>ボタンの練習</h1>
-<a href="#" class="btn btn-success">ボタン</a>
-<a href="#" class="btn btn-warning">ボタン</a>
+
+<h2 class="container text-center background my-5 py-2">自己紹介ページ</h2>
+
+
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <h2 class="text-center">名前</h2>
+      <h3 class="text-center">小平慎太郎</h3>
+      <img src="images.jpeg" alt="someone">
+
+    </div>
+  </div>
+</div>
+
+<div class="container  background">
+  <div class="row">
+    <!-- <div class="mx-auto"> -->
+      <div class="card　col-lg mx-auto" style="text-align:center">
+        <div class="card-body">
+          <h5 class="card-title">好きな果物</h5>
+          <p class="card-text">寿司</p>
+        </div>
+      </div>
+
+      <div class="card　col-lg mx-auto" style="text-align:center">
+        <div class="card-body">
+          <h5 class="card-title">好きな食べ物</h5>
+          <p class="card-text">寿司</p>
+        </div>
+      </div>
+
+      <div class="card　col-lg mx-auto" style="text-align:center">
+        <div class="card-body">
+          <h5 class="card-title">好きなスポーツ</h5>
+          <p class="card-text">テニス</p>
+        </div>
+      </div>
+
+    <!-- </div> -->
+  </div>
+</div>
+
+<div class="container" style="text-align:center">
+  <div class="row">
+    <div class="mx-auto">
+      <h2 class="text-center py-2">SNS/連絡先</h2>
+    </div>  
+  </div>
+
+
+
+
+  <div class="row">
+    <div class="mx-auto">
+     <i class="fab fa-twitter fa-2x"></i><p class="text-center">shinshinshin</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="mx-auto">
+      <i class="fab fa-facebook fa-2x"></i><p>shinshinshin</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="mx-auto"> 
+      <i class="far fa-envelope fa-2x"></i><p>shin.hira323@gmail.com</p>
+    </div>
+  </div>
+
+</div>
+
+
 </body>
 </html>
